# Digital_Twin

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  extract_karpathy_voice.py  main.py  pyproject.toml  requirements.txt
agent/: graph.py  nodes.py  persona.py  persona_validator.py  state.py
api/: main.py
audio/: cadence_formatter.py  voicebox_client.py
core/: __init__.py  config_loader.py  orchestrator.py  persona.py  prompt_builder.py  session_store.py  tracing.py
dashboard/: Sources_and_conversations  __init__.py  memory_viz.py
data/: scraped_tweets.csv
data/raw/: andrej_karpathy_bio.md
data_collection/: collect_blog.py  collect_github.py  collect_papers.py  collect_twitter.py  config_sources.yaml  run_all.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_SOURCES.md  TROUBLESHOOTING.md
eval/: compare_runs.py  llm_judge.py  run_eval.py
feedback/: store.py
memory/: __init__.py  consolidator.py  long_term.py  manager.py  short_term.py
rag/: chunker.py  embedder.py  ingestion.py  preprocessor.py  retriever.py
scripts/: __init__.py  extract_transcripts.py  full_pipeline.py  import_tweets.py  ingest_documents.py  ingest_transcripts_only.py  process_transcripts.py
static/: index.html
tests/: __init__.py  conftest.py  test_basic.py  test_data_collection.py  test_memory_operations.py  test_orchestrator.py  test_persona_consistency.py  test_rag_retrieval.py
timeline/: __init__.py  engine.py  phases.yaml
