[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-twin-karpathy"
version = "0.1.0"
description = "A sophisticated AI agent emulating Andrej Karpathy using LangGraph, Gemini 2.5 Flash, and a dual memory system."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antigravity Pair Programmer", email = "agent@antigravity.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.2",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "arxiv>=2.1.0",
    "pdfminer.six>=20221105",
    "youtube-transcript-api>=0.6.1",
    "google-genai>=0.1.1",
    "pyyaml>=6.0.1",
    "numpy>=1.22.4,<2.0.0",
    "pytest>=7.4.0",
    "pydantic>=2.0"
]
